# pjst

./: .gitignore  Makefile  README.md  pyproject.toml
src/examples/: db.sqlite3
src/examples/django_example/: manage.py
src/examples/django_example/articles_app/: admin.py  models.py  test_articles.py  urls.py  views.py
src/examples/django_example/articles_app/migrations/: 0001_initial.py
src/examples/django_example/articles_project/: asgi.py  settings.py  urls.py  wsgi.py
src/examples/fastapi_example/: app.py  models.py  test_articles.py  views.py
src/examples/flask_example/: app.py  models.py  test_articles.py  views.py
src/pjst/: __init__.py  django.py  exceptions.py  fastapi.py  flask.py  resource.py  resource_handler.py  types.py  utils.py
